Correciones en las url del json

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>PreEntrega3</title>
 </head>
 <body>
-    <h1>TIENDA DE PRODUCTOS DEL AUTOMOTOR</h1>
+    <h1>LATTE CAFETERIA</h1>
 
     <input type="text" id="buscador" placeholder="Buscar producto por nombre">
 
-    <label><input class="input" type="checkbox" id="cosmetica" value="cosmetica">Cosmetica</label>
-    <label><input class="input" type="checkbox" id="maquinas" value="cosmetica">Maquinas</label>
-    <label><input class="input" type="checkbox" id="autopartes" value="cosmetica">Autopartes</label>
+    <label><input class="input" type="checkbox" id="cafe" value="cafe">Cafe</label>
+    <label><input class="input" type="checkbox" id="bebidasfrias" value="bebidasfrias">Bebidas Frias</label>
+    <label><input class="input" type="checkbox" id="granos" value="granos">Granos</label>
 
     <input id="usuario" placeholder="Usuario">
     <input id="contrasenia" placeholder="Contraseña" type="password">
